--- a/style4.css
+++ b/style4.css
@@ -1,5 +1,5 @@
 body{
-font-family: 'Times New Roman', Times, serif;
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 a, a:hover{
@@ -9,10 +9,11 @@ a, a:hover{
 }
 
 .navbar {
-    padding: 15px 10px;
-    background: #fff;
-    margin-bottom: 40px;
-    box-shadow: 3px 2px 2px rgba(0, 0, 0, 0.1);
+  padding: 10px 10px;
+  background: #fff;
+  border-radius: 0;
+  margin-bottom: 40px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 }
 
 .line {
@@ -26,20 +27,17 @@ a, a:hover{
     background:#0d0c35;
     color: white;
 }
-/* ---------------------------------------------------
-    SIDEBAR STYLE
------------------------------------------------------ */
-.wrapper {
-    display: flex;
-    align-items: stretch;
-}
 
+/*SIDEBAR STYLE*/
+.wrapper{
+    display: flex;
+}
 #sidebar ul li a#sair{
     color: tomato;
 }
 
 #sidebar {
-    width: 250px;
+    width: 300px;
     background: #0d0c35;
     color: #fff;
     transition: 0.3s;
@@ -59,8 +57,6 @@ a, a:hover{
 .photo-circular img{
     width: 50px;
     border-radius: 50%;
-    margin-left: -22px;
-
 }
 
 .name{
@@ -114,8 +110,6 @@ a, a:hover{
 
 }
 
-
-
 #sidebar ul li a i {
     margin-right: 10px;
 }
@@ -126,62 +120,27 @@ a, a:hover{
 }
 
 
-
-/* ---------------------------------------------------
-    CONTENT STYLE
------------------------------------------------------ */
-#content {
+/*PAGE STYLE*/
+#page {
     padding: 20px;
     min-height: 100vh;
-    transition: all 0.3s;
 }
 
 
-/* ---------------------------------------------------
-    MEDIAQUERIES
------------------------------------------------------ */
-@media (max-width: 768px) {
+/*MEDIAQUERIES*/
+@media (min-width: 400px) {
     #sidebar {
-        min-width: 80px;
-        max-width: 100%;
-        text-align: center;
-        margin-left: -80px !important ;
+      margin-left: 0;
     }
-    a::before{
-        top: auto;
-        bottom: 5px;
-        right: 50%;
-        -webkit-transform: translateX(50%);
-        -ms-transform: translateX(50%);
-        transform: translateX(50%);
+  
+    #page {
+      min-width: 0;
+      width: 100%;
+      
     }
-    #sidebar.active {
-        margin-left: 0 !important;
+  
+    #sidebar.toggled{
+      margin-left: -15rem;
     }
-
-    #sidebar ul li a {
-        padding: 20px 10px;
-    }
-
-    #sidebar ul li a span {
-        font-size: 0.85em;
-    }
-    #sidebar ul li a i {
-        margin-right:  0;
-        display: block;
-    }
-
-    #sidebar ul ul a {
-        padding: 10px !important;
-    }
-
-    #sidebar ul li a i {
-        font-size: 1.3em;
-    }
-    #sidebar {
-        margin-left: 0;
-    }
-    #sidebarCollapse span {
-        display: none;
-    }
-}
+  
+  }
