--- a/style4.css
+++ b/style4.css
@@ -1,29 +1,35 @@
-body, html{
-font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-height: 100%;width:100%;
-}
-.fl{
-    float: left;
-}
-canvas{
-    width: 600px;
-}
-.header{
+body,
+html {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    height: 100%;
     width: 100%;
 }
 
-a, a:hover{
+.fl {
+    float: left;
+}
+
+canvas {
+    width: 600px;
+}
+
+.header {
+    width: 100%;
+}
+
+a,
+a:hover {
     color: inherit;
     text-decoration: none;
     transition: all 0.3s;
 }
 
 .navbar {
-  padding: 10px 10px;
-  background: #fff;
-  border-radius: 0;
-  margin-bottom: 40px;
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+    padding: 10px 10px;
+    background: #fff;
+    border-radius: 0;
+    margin-bottom: 40px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 }
 
 .line {
@@ -33,45 +39,53 @@ a, a:hover{
     margin: 40px 0;
 }
 
-#menu{
-    background:#0d0c35;
-    color: white;
+#menu {
+    margin-left: 10px;
+    background: rgb(255, 255, 255);
+    color: #0d0c35;
 }
 
+
 /*SIDEBAR STYLE*/
-.wrapper{
+
+.wrapper {
     display: flex;
     flex: auto;
     float: left;
+    /* height: 100%; */
 }
-#sidebar ul li a#sair{
+
+#sidebar ul li a#sair {
     color: tomato;
 }
+
+
+/* #sidebar, precisa corrigir bug na transição, a imagem está bugando a transição */
 
 #sidebar {
     width: 300px;
     background: #0d0c35;
     color: #fff;
-    transition: 0.3s;
+    transition: 0s;
 }
 
 #sidebar.active {
-    width: 100px;
+    width: 100%;
 }
 
-.sidebar-head{
+.sidebar-head {
     margin-bottom: 30px;
     padding: 30px;
     text-align: left;
     font-size: 40px;
 }
 
-.photo-circular img{
+.photo-circular img {
     width: 50px;
     border-radius: 50%;
 }
 
-.name{
+.name {
     border-radius: 5px;
     font-size: 15px;
     background: white;
@@ -81,8 +95,6 @@ a, a:hover{
     margin-left: -22px;
     display: inline;
 }
-
-
 
 #sidebar ul li a {
     text-align: left;
@@ -94,14 +106,13 @@ a, a:hover{
     font-size: 0.85em;
 }
 
-#sidebar.active .sidebar-head span{
+#sidebar.active .sidebar-head span {
     display: none;
 }
 
-#sidebar.active .sidebar-head .photo-circular{
-    text-align: center;
+#sidebar.active .sidebar-head .photo-circular {
+    display: none;
 }
-
 
 #sidebar.active ul li a span {
     display: none;
@@ -117,22 +128,22 @@ a, a:hover{
     font-size: 20px;
     display: block;
 }
+
 #sidebar ul li a:hover {
     color: #75ad0a;
-
 }
 
 #sidebar ul li a i {
     margin-right: 10px;
 }
 
-#sidebar ul li.active{
+#sidebar ul li.active {
     color: #fff;
-
 }
 
 
 /*PAGE STYLE*/
+
 #page {
     padding: 20px;
     min-height: 100vh;
@@ -140,19 +151,16 @@ a, a:hover{
 
 
 /*MEDIAQUERIES*/
+
 @media (min-width: 400px) {
     #sidebar {
-      margin-left: 0;
+        margin-left: 0;
     }
-  
     #page {
-      min-width: 0;
-      width: 100%;
-      
+        min-width: 0;
+        width: 100%;
     }
-  
-    #sidebar.toggled{
-      margin-left: -15rem;
+    #sidebar.toggled {
+        margin-left: -15rem;
     }
-  
-  }
+}
