--- a/styleLogin.css
+++ b/styleLogin.css
@@ -22,13 +22,17 @@ html, body{
 .form{
     width: 400px;
     margin: 0 auto;
-    height: 450px;
+    height: 500px;
     border-radius: 10px;
     padding: 30px 0;
     background-color: white;
     animation-name:login;
     animation-duration: 1s;
     overflow: hidden;
+}
+
+.form h2{
+    text-align: center;
 }
 
 .btn{
@@ -72,13 +76,9 @@ html, body{
 
 .span{
     position: relative;
-    top: -57px;
+    top: -65px;
     right: 50px;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
     float: right;
-    background: linear-gradient(#1a125f, #4237aa);
 }
 
 .btn{
