--- a/style4.css
+++ b/style4.css
@@ -9,6 +9,10 @@ body, html{
     height: 100%;
 }
 
+.clear{
+    clear: both;
+}
+
 .grid{
     height: 100%;
     display: grid;
@@ -22,20 +26,11 @@ body, html{
     ;
 }
 
-.sala {
-    font-size: 1em;
-    color: white;
-    text-decoration: none;
-    margin: 5px;
-    background-color: rgb(255, 255, 255);
-}
-
-
 /* Nav */
 
 .nav{
     grid-area: nav;
-    background: linear-gradient(135deg, #1a125f, #3c319e);
+    background: linear-gradient(135deg, #2d2486, #594dc4);
     display: grid;
     padding: 0 5%;
     grid-template-columns: 1fr auto;
@@ -49,24 +44,22 @@ body, html{
     list-style: none;
 }
 
-.nav.salas{
-    display: none;
-}
-
 .nav ul li a{
     padding: 10px 20px;
     margin: 0 5px;
     border-radius: 5px;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgb(255, 255, 255);
     text-decoration: none;
-    color: white;
+    color: rgb(0, 0, 0);
     transition: .4s;
+    font-weight: 500;
     display: block;
     transition: 0.3s;
 }
 
 .nav ul li a:hover{
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.3);
+    color: white;
 
 }
 
@@ -76,6 +69,112 @@ body, html{
 .content{
     grid-area:content;
 }
+
+.left{
+    height:100%;
+    width: 30%;
+    float: left;
+    padding: 10px 30px;
+}
+
+.status{
+    width: 100%;
+    height: 95%;
+    border-radius: 5px;
+    background: linear-gradient(135deg, #2d2486, #594dc4);
+    color: white;
+    padding: 20px 0;
+}
+
+.status ul{
+    list-style: none;
+}
+
+.status ul li{
+    font-size: 20px;
+    border-bottom:2px solid #7972bb;
+    margin: 0 30px;
+    padding: 20px 0;
+}
+
+#reserva{
+    width: 40%;
+    height: 35px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    margin: 25% 30%;
+    transition: 0.4s;
+    background-color: white;
+}
+
+#reserva:hover{
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+}
+
+
+.right{
+    float: right;
+    width: 70%;
+}
+
+.grafico{
+    width: 500px;
+    height: 400px;
+    margin: 5% auto;
+    background-color: rgb(165, 165, 165);
+
+}
+
+@media screen and (max-width:1100px){
+    .left{
+        float: none;
+        width: 100%;
+        height: auto;
+    }
+
+    .status{
+        width: 50%;
+        margin: 0 auto;
+
+    }
+
+    .right{
+        float: none;
+        width: 100%;
+        height: auto;
+    }
+
+}
+
+@media screen and (max-width:420px){
+    .left{
+        float: none;
+        width: 100%;
+        height: auto;
+    }
+
+    .status{
+        width: 100%;
+        margin: 0 auto;
+
+    }
+
+    .right{
+        float: none;
+        width: 100%;
+        height: auto;
+    }
+
+    .grafico{
+        width: 98%;
+    }
+
+}
+
 
 /* Modal */
 
@@ -94,6 +193,7 @@ body, html{
     z-index: 2000;
 }
 
+
 .salas{
     position: relative;
     background-color: white;
@@ -102,11 +202,14 @@ body, html{
     height: 70%;
     border-radius: 10px;
     animation: modal .5s;
-    grid-template-rows: 50px;
+    display: flex;
+    flex-wrap: wrap;
     overflow-y: auto;
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
+    padding-left: 50px;
 }
+
+
+
 /*
 #fechar{
     background-color: rgb(15, 52, 163);
@@ -123,23 +226,39 @@ body, html{
 }
 */
 
-.salas ul{
-    margin: 10px;
-    list-style: none;
+.container {
+    list-style:none;
+    margin: 0;
+    padding: 20px;
 }
 
-.salas ul li{
-    margin: 40px 10px;
-}
-
-.salas ul li a{
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
+.item{
+    margin:30px 0px;
     padding: 10px 10px;
-    background-color: rgb(88, 88, 88);
+    border-radius: 5px;
+    justify-content: space-between;
+    background-color: #1a125f;
 }
 
+.item a{
+    padding: 10px 15px;
+    background-color: #1a125f;
+    text-decoration: none;
+    color: white;
+}
+
+#pesquisa{
+    position: relative;
+    top: 10px;
+    border-radius: 5px;
+    border: 1px solid black;
+    width: 90%;
+    height: 40px;
+    margin: 0 auto;
+    padding: 6px;
+
+
+}
 
 @keyframes modal{
     from{
@@ -150,20 +269,4 @@ body, html{
     }
 }
 
-@media screen and (max-width:1024px){
-    .salas{
-        display: grid;
-        grid-template-columns: repeat(6, 1fr);
-        margin: 5px;
-        list-style: none;
-    }
-}  
 
-@media screen and (max-width:768px){
-    .salas{
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        margin: 5px;
-        list-style: none;
-    }
-}    
